@@ -3,7 +3,7 @@ package io.cucumber.core.io;
 import org.junit.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Iterator;
 
 import static org.junit.Assert.assertTrue;
@@ -14,7 +14,7 @@ public class DelegatingResourceIteratorFactoryTest {
     public void should_load_test_resource_iterator() throws MalformedURLException {
         ResourceIteratorFactory factory =
                 new DelegatingResourceIteratorFactory(new ZipThenFileResourceIteratorFactory());
-        URL url = new URL(TestResourceIteratorFactory.TEST_URL);
+        URI url = URI.create(TestResourceIteratorFactory.TEST_URL);
 
         assertTrue(factory.isFactoryFor(url));
 
